--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
                     <ul class="navbar-nav">
                         <a href="index.html" class="nav-link">Acceuil</a>
                         <a href="#" class="nav-link">Articles</a>
-                        <!--<a href="#" class="nav-link">Pages</a>
-                        <a href="#" class="nav-link">Categories</a>
-                        <a href="#" class="nav-link">About</a>-->
                     </ul>
                 </div>
 
@@ -51,10 +48,7 @@
                         <div class="search-box">
                             <a href="https://www.instagram.com/lyceesavarydemauleon/" class="nav-link"><i class="fas fa-search"></i></a>
                         </div>
-                        <!--<a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>-->
                         <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
-                        <!--<a href="#" class="nav-link"><i class="fab fa-dribbble"></i></a>-->
                     </ul>
                 </div>
             </nav>
@@ -112,27 +106,26 @@
                                 </div>
                             </article>
                         </div>
-                        <!-- article 
+                        <!-- article -->
                         <div class="grid-item">
                             <article class="article">
                                 <div class="card">
                                     <div class="overflow-img">
-                                        <a href="#">
-                                            <img src="./assets/img3.jpg" class="img-fluid" alt="">
+                                        <a href="articles/Article_Sortie_15_10_2021.html">
+                                            <img src="imported-images/Article 15_10/img1.jpg" class="img-fluid" alt="">
                                         </a>
                                     </div>
                                     <div class="card-body text-center px-1">
-                                        <a href="#" class="text-title display-1 text-dark">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, odio.
+                                        <a href="articles/Article_Sortie_15_10_2021.html" class="text-title display-1 text-dark">
+                                            Un après-midi dans les marais
                                         </a>
                                         <p class="secondary-title text-secondary display-3">
-                                            <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
-                                            <span><i class="far fa-comments text-primary"></i> 12</span>
+                                            <span><i class="far fa-clock text-primary"></i> Samedi 16 Octobre</span>
                                         </p>
                                     </div>
                                 </div>
                             </article>
-                        </div>-->
+                        </div>
                         <!-- .article -->
                         <!-- article --
                         <div class="grid-item">
@@ -149,7 +142,6 @@
                                         </a>
                                         <p class="secondary-title text-secondary display-3">
                                             <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
-                                            <span><i class="far fa-comments text-primary"></i> 12</span>
                                         </p>
                                     </div>
                                 </div>
@@ -171,7 +163,6 @@
                                         </a>
                                         <p class="secondary-title text-secondary display-3">
                                             <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
-                                            <span><i class="far fa-comments text-primary"></i> 12</span>
                                         </p>
                                     </div>
                                 </div>
@@ -271,54 +262,6 @@
             </section>
             <!-- .Blog Post Section -->
 
-            <!-- Swiper Slider -->
-            <!--<section class="slider">
-                <div class="container">-->
-                    <!-- Slider main container -->
-                    <!--<div class="swiper-container">-->
-                        <!-- Additional required wrapper -->
-                        <!--<div class="swiper-wrapper">-->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img1.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img2.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img3.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img4.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img5.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img6.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->
-                            <!-- Slides -->
-                            <!--<div class="swiper-slide">
-                                <a href="#"><img src="./assets/slider/img7.jpg" class="img-fluid" alt=""></a>
-                            </div>-->
-                            <!-- .Slides -->                            
-                        <!--</div>
-                    </div>
-                </div>
-            </section>-->
-            <!-- .Swiper Slider -->
-
         </main>
         <!-- .Main Site -->
 
@@ -340,10 +283,6 @@
                                 <i class="fas fa-mobile text-primary"></i>
                                 <a href="https://savary-mauleon.paysdelaloire.e-lyco.fr/">Lycée Savary de Mauleon</a>
                             </div>
-                            <!--<div class="email">
-                                <i class="fas fa-envelope text-primary"></i>
-                                hellogevona@gmail.com
-                            </div>-->
                         </div>
                     </div>
                     <div class="col-3">
@@ -366,17 +305,17 @@
                                     </div>
                                 </article>
                             </div>
-                            <!--<div class="flex-item">
+                            <div class="flex-item">
                                 <article class="article">
                                     <div class="d-flex">
-                                        <a href="#">
-                                            <img src="./assets/img1.jpg" class="object-fit px-1" alt="">
+                                        <a href="articles/Article_Sortie_24_09_2021.html">
+                                            <img src="./imported-images/Article24_09/IMG_20210924_140849.jpg" class="object-fit px-1" alt="">
                                             <div class="px-1">
-                                                <a href="#" class="text-title display-2 text-dark">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, laudantium.
+                                                <a href="articles/Article_Sortie_24_09_2021.html" class="text-title display-2 text-dark">
+                                                    Notre tour à vélo dans les marais !
                                                 </a>
                                                 <p class="secondary-title text-secondary display-3">
-                                                    <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
+                                                    <span><i class="far fa-clock text-primary"></i> 13 Octobre 2021</span>
                                                 </p>
                                             </div>
                                         </a>
@@ -386,14 +325,14 @@
                             <div class="flex-item">
                                 <article class="article">
                                     <div class="d-flex">
-                                        <a href="#">
-                                            <img src="./assets/img3.jpg" class="object-fit px-1" alt="">
+                                        <a href="articles/Article_Sortie_15_10_2021.html">
+                                            <img src="imported-images/Article 15_10/img1.jpg" class="object-fit px-1" alt="">
                                             <div class="px-1">
-                                                <a href="#" class="text-title display-2 text-dark">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, laudantium.
+                                                <a href="articles/Article_Sortie_15_10_2021.html" class="text-title display-2 text-dark">
+                                                    Un après-midi dans les marais
                                                 </a>
                                                 <p class="secondary-title text-secondary display-3">
-                                                    <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
+                                                    <span><i class="far fa-clock text-primary"></i> 16 Octobre 2021</span>
                                                 </p>
                                             </div>
                                         </a>
@@ -401,36 +340,16 @@
                                 </article>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                     <div class="col-3">
-                        <!--<h2 class="footer-title secondary-title">Tags</h2>
-                        <div class="tags">
-                            <div class="d-flex flex-wrap">
-                                <a href="#" class="nav-link btn bg-light">Travel</a>
-                                <a href="#" class="nav-link btn bg-light">Food</a>
-                                <a href="#" class="nav-link btn bg-light">Lifestyle</a>
-                                <a href="#" class="nav-link btn bg-light">Technologoy</a>
-                                <a href="#" class="nav-link btn bg-light">Fashion</a>
-                            </div>
-                        </div>-->
                         <h2 class="footer-title secondary-title mt-2">Réseaux Sociaux</h2>
                         <div class="tags social">
                             <div class="d-flex flex-wrap">
-                                <!--<a href="#" class="nav-link btn bg-light"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="nav-link btn bg-light"><i class="fab fa-twitter"></i></a>-->
                                 <a href="https://www.instagram.com/lyceesavarydemauleon/" class="nav-link btn bg-light"><i class="fab fa-instagram"></i></a>
-                                <!--<a href="#" class="nav-link btn bg-light"><i class="fab fa-dribbble"></i></a>-->
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- copyrights -->
-                <!--<div class="copyrights">
-                    <p class="text-center text-secondary display-2">
-                        &copy; 2021 <a href="#" class="text-primary">Sconder</a> - Personal Blog Theme. All rights reserved.
-                    </p>
-                </div>-->
             </div>
         </footer>
         <!-- .footer -->
